objects/Sales_Line_EQAI_Mapping__mdt/Sales_Line_EQAI_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Mapping values  Salesforce field values to EQAI Table-Field values.</description>
    <label>Sales Line EQAI Mapping</label>
    <pluralLabel>Sales Line EQAI Mapping</pluralLabel>
</CustomObject>