objects/Sales_Line_EQAI_Mapping__mdt/fields/EQAI_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Field_Name__c</fullName>
    <label>EQAI Field Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>resource_type</fullName>
                <default>true</default>
                <label>resource_type</label>
            </value>
            <value>
                <fullName>bill_unit_code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>