objects/Sales_Line_EQAI_Mapping__mdt/fields/EQAI_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Field_Value__c</fullName>
    <label>EQAI Field Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>