objects/Sales_Line_EQAI_Mapping__mdt/fields/Salesforce_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_API_Name__c</fullName>
    <label>Salesforce Field API Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category__c</fullName>
                <default>true</default>
                <label>Category__c</label>
            </value>
            <value>
                <fullName>Unit_of_Measure__r.Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>