objects/Sales_Line_EQAI_Mapping__mdt/fields/Salesforce_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_Value__c</fullName>
    <label>Salesforce Field Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>